group 'SpringMvcFormHandling'
version '1.0-SNAPSHOT'
apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'idea'
apply plugin: 'application'
apply plugin: 'org.akhikhl.gretty'

// JDK 7
sourceCompatibility = 1.7
targetCompatibility = 1.7

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    compile 'ch.qos.logback:logback-classic:1.1.3'
    compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
    compile 'org.springframework:spring-jdbc:4.1.6.RELEASE'
    compile 'javax.servlet:jstl:1.2'
    compile 'mysql:mysql-connector-java:5.1.29'
//    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.4.RELEASE'
    compile 'org.hibernate:hibernate-core:4.3.6.Final'
    compile 'commons-dbcp:commons-dbcp:1.4'
    compile group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10'
    //include in compile only, exclude in the war
    providedCompile 'javax.servlet:servlet-api:2.5'
}


buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        //Gretty Embedded Jetty
        classpath 'org.akhikhl.gretty:gretty:+'
    }
}

task getHomeDir << {
    println gradle.gradleHomeDir
}

gretty {
    jvmArgs = [
            '-XX:MaxPermSize=256m',
            '-Xms512m',
            '-Xmx1024m']
    port = 8070
    scanInterval = 1
    fastReload = true
    recompileOnSourceChange = true
    reloadOnClassChange = true
    reloadOnLibChange = true
    contextPath = '/'
    servletContainer = 'jetty9' //tomcat7 or tomcat8
}


